# TIMP_lab05

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
banking/: CmakeLists.txt  Transaction.cpp
tests/: test.cpp
